# marathon_app

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  MEMORY.md  PLAN.md  PROJECT_TRACKER.md  SESSION_1.md  SESSION_2.md  SESSION_3.md  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json  schema.sql
.claude/: settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.claude/helpers/: session-log.mjs
.swarm/: memory.db  schema.sql
alembic/: env.py
alembic/versions/: 3ef08f92d555_strava_integration.py  (+5 more)
app/: auth.py  config.py  db.py  deps.py  main.py
mobile/: .env.example  App.tsx  app.json  openapi.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
scripts/: export_openapi.sh
tests/: conftest.py  test_agent_context.py  test_auth.py  test_cache_invalidation.py  test_chat_routes.py  test_coach_brief.py  test_coach_chat.py  test_config.py  test_edit_workout.py  test_garmin_ingest.py  test_garmin_sync.py  test_gemini_client.py  test_log_completed.py  test_move_endpoints.py  test_plan_adapter.py  test_plan_full.py  test_plan_history.py  test_plan_parser.py  test_plan_reseed.py  test_plan_routes.py  test_plan_start_date.py  test_plan_stats.py  test_proposal_apply.py  test_recent_completed.py  test_reconciler.py  test_reschedule_original.py  test_seed.py  test_strava_oauth.py  test_strava_routes.py  test_strava_sync.py  test_workout_family.py  test_workout_linkage.py
(+150 files in other folders)
